# zgame

./: README.md  pyproject.toml
.github/workflows/: publish.yml  python-package.yml
Example/: snake_example.py
src/zgame/: __init__.py
